# 2023shumoCup

./: .gitignore  Q1-5问题topsis和原始问卷汇总结果.xlsx  main.ipynb  pyproject.toml  一级指标topsis结果.xlsx  一级指标权重.txt  一级指标结果.xlsx  二级指标权重.txt  二级指标权重.xlsx  信度分析.docx  效度分析.docx  数据编码.ipynb  桑基图.html  绘图.ipynb  编码规则.xlsx  表5-10 一级指标部分问卷得分情况.emf  表5-10 一级指标部分问卷得分情况.xlsx  表5-6 删除测试分析汇总表.emf  论文补图.ipynb  赋分后df.xlsx  附件2：调查数据.xlsx
algorithm/: ewm.py  topsis.py
图片/: 上网方式.emf  上网时长.emf  专业.emf  年级.emf  性别.emf  性格.emf
多选题分析/: 23、在网络中您主要进行哪些活动？.xlsx  24、您认为学习软件与课堂教学相比较最大的优势是什么？.xlsx  25、进入大学后在学习中困扰您的问题是什么？.xlsx  26、对于利用学习软件进行学习这种形式，您最关注的是.xlsx  27、您考虑过使用人工智能工具的哪些安全性？.xlsx  28、您认为以下哪些方面对人工智能学习工具很重要？.xlsx  29、您心目中的人工智能学习工具应该具有以下哪些功能？.xlsx  30、您认为人工智能学习工具融合到哪个学习环节？.xlsx  多选题分析.ipynb
电工杯/电工杯/B/: B题 人工智能对大学生学习影响的评价.docx  附件1：调查问卷.docx
