[tool.poetry]
name = "shumocup"
version = "0.1.0"
description = ""
authors = ["JamesCurtis <jamescurtis@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
jupyterlab = "^3.6.3"
numpy = "^1.24.3"
pandas = "^2.0.1"
shap = "^0.41.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
catboost = "^1.2"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
lightgbm = "^3.3.5"
statsmodels = "^0.14.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.10.0"
scipy = "^1.10.1"
pingouin = "^0.5.3"
factor-analyzer = "^0.4.1"
pyarrow = "^12.0.0"
scikit-opt = "^0.6.6"
pyahp = "^0.1.2"
pydecision = "^2.8.7"
pydecisions = "^0.2.4"
prettytable = "^3.7.0"
scikit-criteria = "^0.8.3"
plotly = "^5.14.1"
kaleido = "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
